# CHEMIFRAME

./: .gitignore  CHEMIFRAME.spec  LICENSE  RCC_CONTEXT.md  README.md  demo_hybrid.py  demo_run.py  demo_sequence.py  dump_repo_state.ps1  main.py  pyproject.toml
artifacts/compiled_xdl/: route_aryl_001.xdl
artifacts/contracts/: route_aryl_001.contract.json
artifacts/reports/: run_1a5fe214.report.json  run_468b62f9.report.json  run_7cfa2d20.report.json  run_c16b210a.report.json  sim_4c70e4d2.report.json
artifacts/traces/: run_1a5fe214.json  run_2db55ce7.json  run_468b62f9.json  run_4739886b.json  run_7cfa2d20.json  run_c16b210a.json  sim_4c70e4d2.json
chemiframe/: __init__.py  demo_support.py
chemiframe/api/: routes.py
chemiframe/planner/: search.py
chemiframe/ui/: app.py  main_window.py
examples/: blueprint_example_01.py  compiled_xdl_example_01.xdl  hybrid_compiled_artifact_01.hybrid.json  hybrid_transfer_fail_01.json  hybrid_transfer_pass_01.json  intent_example_01.yaml  intent_hybrid_01.json  intent_sequence_01.json  route_example_01.json  sequence_compiled_artifact_01.seq.json  sequence_transfer_fail_01.json  sequence_transfer_pass_01.json  simulated_dec_event_example_01.json  simulated_run_example_01.json  trace_example_01.json  transfer_map_example_01.json
tests/: test_artifact_persistence.py  test_blueprints.py  test_compiler.py  test_hybrid.py  test_hybrid_demo.py  test_parser.py  test_planner.py  test_runtime.py  test_sequence.py  test_sequence_demo.py  test_simulator.py  test_trace.py  test_transfer.py  test_ui_import.py  test_verify.py
(+34 files in other folders)
